<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragmentsForFutureUse.UpdateProduct">

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="272dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/update_stock"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/update_type"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/delete_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/update_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="152dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/update_desc"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="212dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/update_price"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="158dp"
        android:layout_height="92dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="136dp"
        android:text="@string/update"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>