<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9FF"
    tools:context=".SampleFragment2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_image"
        app:layout_constraintBottom_toTopOf="@+id/login_view_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_view_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zaloguj_si"
                android:textAlignment="center"
                android:textColor="@color/registerColor"
                android:textSize="36sp"
                android:textStyle="bold" />

        <EditText
            android:id="@+id/login_userLoginInput"
            android:layout_marginTop="10dp"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/login_userPasswordInput"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/wpisz_has_o"
            android:background="@drawable/custom_edittext"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/zaloguj_si"
            android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

